trying to add correct spacing to bio a

--- a/css/style.css
+++ b/css/style.css
@@ -135,9 +135,9 @@ figcaption {
   padding: 20px;
 }
 
-.bio a {
-  margin: 5px;
-}
+/* .bio a {
+  margin: 15px;
+} */
 
 .gallery {
   margin-top: 20px;
@@ -158,8 +158,8 @@ figcaption {
 
 .friendsGrid {
   display: grid;
-  grid-template: repeat(3, 40em) / repeat(auto-fit, minmax(15em, 1fr));
-  grid-auto-rows: 40em;
+  grid-template: repeat(3, 33em) / repeat(auto-fit, minmax(15em, 1fr));
+  grid-auto-rows: 33em;
   grid-gap: 10px;
 }
 
